topwrap Nexus 7 fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -350,7 +350,7 @@ and (orientation : portrait) {
 	}
 
 	#topwrap {
-		min-height: 190px;
+		min-height: 205px;
 	}
 
 	nav {
